added npm build support

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A  tool for Geocoding aid projects",
   "scripts": {
     "clean": "rimraf dist",
-    "build:webpack": "webpack --config webpack.config.prod.js",
+    "build:webpack": "webpack --config webpack.config.dev.js",
     "build": "npm run clean && npm run build:webpack",
     "start": "node server.js",
     "lint": "eslint app"
