--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "",
   "devDependencies": {
+    "axios": "^0.7.0",
     "babel-core": "^5.4.7",
     "babel-eslint": "^3.1.9",
     "babel-loader": "^5.1.2",
@@ -56,13 +57,19 @@
     "webpack-hot-middleware": "^2.0.0"
   },
   "dependencies": {
+    "axios": "^0.7.0",
     "bootstrap": "^3.3.5",
     "gulp-open": "^1.0.0",
+    "immutable": "^3.7.5",
     "leaflet": "^0.7.7",
-    "react": "^0.14.0",
+    "react": "^0.14.3",
+    "react-addons-linked-state-mixin": "^0.14.2",
     "react-bootstrap": "^0.27.3",
-    "react-dom": "^0.14.0",
+    "react-dom": "^0.14.3",
+    "react-leaflet": "^0.9.0",
     "react-router": "^1.0.0-rc4",
-    "url-loader": "^0.5.6"
+    "reflux": "^0.3.0",
+    "url-loader": "^0.5.6",
+    "whatwg-fetch": "^0.10.1"
   }
 }
