--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-eslint": "^3.1.9",
     "babel-loader": "^5.1.2",
     "babel-plugin-react-transform": "^1.1.1",
+    "babel-polyfill": "^6.2.0",
     "css-loader": "^0.22.0",
     "eslint": "^1.3.1",
     "eslint-plugin-react": "^2.3.0",
@@ -62,6 +63,7 @@
     "gulp-open": "^1.0.0",
     "immutable": "^3.7.5",
     "leaflet": "^0.7.7",
+    "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-addons-linked-state-mixin": "^0.14.2",
     "react-bootstrap": "^0.27.3",
