--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   "dependencies": {
     "axios": "^0.7.0",
     "bootstrap": "^3.3.5",
+    "gridisgood": "^0.1.3",
     "gulp-open": "^1.0.0",
     "immutable": "^3.7.5",
     "leaflet": "^0.7.7",
