--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "gulp-open": "^1.0.0",
     "immutable": "^3.7.5",
     "leaflet": "^0.7.7",
+    "leaflet-pip": "^0.1.1",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-addons-linked-state-mixin": "^0.14.2",
