--- a/package.json
+++ b/package.json
@@ -60,11 +60,13 @@
   },
   "dependencies": {
     "axios": "^0.7.0",
+    "body-parser": "^1.14.1",
     "bootstrap": "^3.3.5",
     "gulp-open": "^1.0.0",
     "immutable": "^3.7.5",
     "leaflet": "^0.7.7",
     "lodash": "^3.10.1",
+    "nedb": "^1.5.0",
     "react": "^0.14.3",
     "react-addons-linked-state-mixin": "^0.14.2",
     "react-bootstrap": "^0.27.3",
