--- a/package.json
+++ b/package.json
@@ -62,18 +62,23 @@
     "axios": "^0.7.0",
     "body-parser": "^1.14.1",
     "bootstrap": "^3.3.5",
+    "esri-leaflet": "^2.0.0-beta.7",
     "gridisgood": "^0.1.3",
     "gulp-open": "^1.0.0",
     "immutable": "^3.7.5",
     "leaflet": "^0.7.7",
+    "leaflet-clonelayer": "^1.0.1",
     "leaflet-pip": "^0.1.1",
+    "leaflet-providers": "^1.1.7",
+    "leaflet.layerscontrol-minimap": "^1.0.6",
+    "leaflet.sync": "0.0.5",
     "lodash": "^3.10.1",
     "nedb": "^1.5.0",
     "react": "^0.14.3",
     "react-addons-linked-state-mixin": "^0.14.2",
     "react-bootstrap": "^0.27.3",
     "react-dom": "^0.14.3",
-	"react-draggable": "^1.1.3",
+    "react-draggable": "^1.1.3",
     "react-leaflet": "^0.9.0",
     "react-router": "^1.0.0-rc4",
     "reflux": "^0.3.0",
