--- a/package.json
+++ b/package.json
@@ -46,7 +46,10 @@
     "gulp-react": "^3.1.0",
     "gulp-util": "^3.0.7",
     "html-webpack-plugin": "^1.6.2",
+    "i18next": "^2.0.22",
+    "i18next-xhr-backend": "^0.3.0",
     "intro.js": "^1.1.1",
+    "jsonfile": "^2.2.3",
     "leaflet-image": "^0.1.0",
     "node-sass": "^3.4.1",
     "react-transform-catch-errors": "^1.0.0",
