--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
   },
   "homepage": "",
   "devDependencies": {
+    "async": "^1.5.2",
     "axios": "^0.7.0",
     "babel-core": "^5.4.7",
     "babel-eslint": "^3.1.9",
     "babel-loader": "^5.1.2",
     "babel-plugin-react-transform": "^1.1.1",
     "babel-polyfill": "^6.2.0",
+    "binary-search-tree": "^0.2.5",
     "css-loader": "^0.22.0",
     "eslint": "^1.3.1",
     "eslint-plugin-react": "^2.3.0",
@@ -51,6 +53,7 @@
     "intro.js": "^1.1.1",
     "jsonfile": "^2.2.3",
     "leaflet-image": "^0.1.0",
+    "mkdirp": "^0.5.1",
     "node-sass": "^3.4.1",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.0",
@@ -58,13 +61,13 @@
     "rimraf": "^2.4.3",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
+    "underscore": "^1.8.3",
     "webpack": "^1.12.2",
     "webpack-babel-jest": "^1.0.0",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.0.0"
   },
   "dependencies": {
-    "axios": "^0.7.0",
     "body-parser": "^1.14.1",
     "bootstrap": "^3.3.5",
     "esri-leaflet": "^2.0.0-beta.7",
@@ -78,7 +81,7 @@
     "leaflet.layerscontrol-minimap": "^1.0.6",
     "leaflet.sync": "0.0.5",
     "lodash": "^3.10.1",
-    "nedb": "^1.5.0",
+    "nedb": "^1.6.0",
     "react": "^0.14.3",
     "react-addons-linked-state-mixin": "^0.14.2",
     "react-bootstrap": "^0.27.3",
