--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,9 @@
 {
-  "stage": 0,
+  "presets": ["react", "es2015","stage-0","stage-1","stage-2","stage-3"],
   "env": {
-    "development": {
-      "plugins": ["react-transform"],
-      "extra": {
-        "react-transform": {
+      "development": {
+      "plugins": [
+        ["react-transform", {
           "transforms": [{
             "transform": "react-transform-hmr",
             "imports": ["react"],
@@ -12,9 +11,10 @@
           }, {
             "transform": "react-transform-catch-errors",
             "imports": ["react", "redbox-react"]
-          }]
-        }
-      }
+          }
+          ]
+        }]
+      ]
     }
   }
 }
