--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/devgateway/open-aid-geocoder"
   },
   "keywords": [
     "geocoding",
@@ -27,70 +27,58 @@
   },
   "homepage": "",
   "devDependencies": {
-    "async": "^1.5.2",
-    "axios": "^0.7.0",
-    "babel-core": "^5.4.7",
-    "babel-eslint": "^3.1.9",
-    "babel-loader": "^5.1.2",
-    "babel-plugin-react-transform": "^1.1.1",
-    "babel-polyfill": "^6.2.0",
-    "binary-search-tree": "^0.2.5",
-    "css-loader": "^0.22.0",
-    "eslint": "^1.3.1",
-    "eslint-plugin-react": "^2.3.0",
-    "express": "^4.13.3",
-    "extract-text-webpack-plugin": "^0.9.1",
-    "file-loader": "^0.8.4",
+    "axios": "^0.9.1",
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.1",
+    "babel-plugin-react-transform": "^2.0.0",
+    "babel-polyfill": "^6.3.14",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "babel-preset-stage-1": "^6.3.13",
+    "babel-preset-stage-2": "^6.3.13",
+    "babel-preset-stage-3": "^6.3.13",
+    "body-parser": "^1.14.2",
+    "bootstrap": "^3.3.6",
+    "css": "^2.2.1",
+    "css-loader": "^0.23.1",
+    "express": "^4.13.4",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
     "font-awesome": "^4.5.0",
     "gulp": "^3.9.0",
-    "gulp-eslint": "^1.0.0",
     "gulp-gh-pages": "^0.5.4",
-    "gulp-react": "^3.1.0",
-    "gulp-util": "^3.0.7",
-    "html-webpack-plugin": "^1.6.2",
-    "i18next": "^2.0.22",
-    "i18next-xhr-backend": "^0.3.0",
-    "intro.js": "^1.1.1",
-    "jsonfile": "^2.2.3",
-    "leaflet-image": "^0.1.0",
-    "mkdirp": "^0.5.1",
-    "node-sass": "^3.4.1",
-    "react-transform-catch-errors": "^1.0.0",
-    "react-transform-hmr": "^1.0.0",
-    "redbox-react": "^1.0.1",
-    "rimraf": "^2.4.3",
-    "sass-loader": "^3.1.1",
-    "style-loader": "^0.13.0",
-    "underscore": "^1.8.3",
-    "webpack": "^1.12.2",
-    "webpack-babel-jest": "^1.0.0",
-    "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.0.0"
-  },
-  "dependencies": {
-    "body-parser": "^1.14.1",
-    "bootstrap": "^3.3.5",
-    "esri-leaflet": "^2.0.0-beta.7",
-    "gridisgood": "^0.1.3",
+    "gulp-nodemon": "^2.0.6",
     "gulp-open": "^1.0.0",
-    "immutable": "^3.7.5",
+    "html-webpack-plugin": "^2.7.2",
+    "i18next": "^2.0.24",
+    "i18next-xhr-backend": "^0.3.0",
+    "immutable": "^3.7.6",
+    "intro.js": "^1.1.1",
     "leaflet": "^0.7.7",
     "leaflet-clonelayer": "^1.0.1",
     "leaflet-pip": "^0.1.1",
     "leaflet-providers": "^1.1.7",
-    "leaflet.layerscontrol-minimap": "^1.0.6",
     "leaflet.sync": "0.0.5",
-    "lodash": "^3.10.1",
-    "nedb": "^1.6.0",
-    "react": "^0.14.3",
-    "react-addons-linked-state-mixin": "^0.14.2",
-    "react-bootstrap": "^0.27.3",
-    "react-dom": "^0.14.3",
+    "node-sass": "^3.4.2",
+    "nodemon": "^1.8.1",
+    "react": "^0.14.7",
+    "react-bootstrap": "^0.28.2",
+    "react-dom": "^0.14.7",
     "react-draggable": "^1.1.3",
-    "react-leaflet": "^0.9.0",
-    "react-router": "^1.0.0-rc4",
+    "react-leaflet": "^0.10.0",
+    "react-router": "^2.0.0-rc5",
+    "react-transform-catch-errors": "^1.0.1",
+    "react-transform-hmr": "^1.0.1",
+    "redbox-react": "^1.2.2",
     "reflux": "^0.3.0",
-    "url-loader": "^0.5.6",
-    "whatwg-fetch": "^0.10.1"
-  }
+    "sass": "^0.5.0",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.12",
+    "webpack-dev-middleware": "^1.5.1",
+    "webpack-hot-middleware": "^2.6.4"
+  },
+  "dependencies": {}
 }
