--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "axios": "^0.9.1",
     "babel-core": "^6.4.5",
+    "babel-eslint": "^4.1.8",
     "babel-loader": "^6.2.1",
     "babel-plugin-react-transform": "^2.0.0",
     "babel-polyfill": "^6.3.14",
@@ -41,6 +42,7 @@
     "bootstrap": "^3.3.6",
     "css": "^2.2.1",
     "css-loader": "^0.23.1",
+    "eslint-plugin-react": "^3.16.1",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
