adding jshint validator

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "font-awesome": "^4.5.0",
     "gulp": "^3.9.0",
     "gulp-gh-pages": "^0.5.4",
+    "gulp-jshint": "^2.0.0",
     "gulp-nodemon": "^2.0.6",
     "gulp-open": "^1.0.0",
     "html-webpack-plugin": "^2.7.2",
@@ -56,6 +57,7 @@
     "i18next-xhr-backend": "^0.3.0",
     "immutable": "^3.7.6",
     "intro.js": "^1.1.1",
+    "jshint": "^2.9.1",
     "leaflet": "^0.7.7",
     "leaflet-clonelayer": "^1.0.1",
     "leaflet-pip": "^0.1.1",
