add loading icon to gazetteer search and results counter into tab header

--- a/app/conf/settings.json
+++ b/app/conf/settings.json
@@ -1,6 +1,6 @@
 {
 			"SEARCH": {
-				"GEO_NAMES_SERVICE_USER_NAME": "demo",
+				"GEO_NAMES_SERVICE_USER_NAME": "aiddata",
 				"FUZZY_LEVEL": 0
 			},
 
