--- a/app/conf/settings.json
+++ b/app/conf/settings.json
@@ -1,6 +1,6 @@
 {
 	"SEARCH": {
-		"GEO_NAMES_SERVICE_USER_NAME": "aiddata",
+		"GEO_NAMES_SERVICE_USER_NAME": "developmentgateway",
 		"FUZZY_LEVEL": 0
 	},
 
