--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "file-loader": "^0.8.5",
     "font-awesome": "^4.5.0",
     "gulp": "^3.9.0",
+    "gulp-eslint": "^2.0.0",
     "gulp-gh-pages": "^0.5.4",
     "gulp-jshint": "^2.0.0",
     "gulp-nodemon": "^2.0.6",
