add country bounds

--- a/app/conf/settings.json
+++ b/app/conf/settings.json
@@ -41,6 +41,15 @@
 				}
 			}
 		}
-	}
+	},
+
+	"SHAPES": [
+		{"name": "Mozambique", "iso": "MOZ", "url" :"https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/MOZ.json"},
+		{"name": "Tanzania", "iso": "TZA", "url" :"https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/TZA.json"},
+		{"name": "Malawi", "iso": "MWI", "url" :"https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/MWI.json"},
+		{"name": "Zambia", "iso": "ZMB", "url" :"https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/ZMB.json"}
+		{"name": "Afghanistan", "iso": "AFG", "url" :"https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/AFG.json"}
+	]
+
 	
 }
