fix issue when execution on mac

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "gulp-jshint": "^2.0.0",
     "gulp-nodemon": "^2.0.6",
     "gulp-open": "^1.0.0",
+    "gulp-util": "^3.0.7",
     "html-webpack-plugin": "^2.7.2",
     "i18next": "^2.0.24",
     "i18next-xhr-backend": "^0.3.0",
@@ -64,6 +65,7 @@
     "leaflet-pip": "^0.1.1",
     "leaflet-providers": "^1.1.7",
     "leaflet.sync": "0.0.5",
+    "lodash": "^4.12.0",
     "node-sass": "^3.4.2",
     "nodemon": "^1.8.1",
     "react": "^0.14.7",
