--- a/package.json
+++ b/package.json
@@ -86,5 +86,7 @@
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.6.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "i18next": "^2.5.1"
+  }
 }
