Added French characters support to CSV import Added import component as part of the js app (it was a different html file) Added import flow to reflux and related components Fixed project list layout was broken with large descriptions Fixed project list pagination refresh issue Added support for iso2 code on countries and shapes Added more search options in order to improve search options Added  African countries geojson files

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "webpack-hot-middleware": "^2.6.4"
   },
   "dependencies": {
-    "i18next": "^2.5.1"
+    "i18next": "^2.5.1",
+    "react-dropzone": "^2.2.4"
   }
 }
