--- a/app/conf/settings.json
+++ b/app/conf/settings.json
@@ -1,58 +1,314 @@
 {
-	"SEARCH": {
-		"GEO_NAMES_SERVICE_USER_NAME": "developmentgateway",
-		"FUZZY_LEVEL": 0
-	},
-
-	"API": {
-		"API_BASE_URL": {
-			"development": "http://localhost:3333",
-			"production": "http://geocoding.dgstg.org"
-		},
-
-		"PROJECT_LIST_END_POINT": "projects",
-
-		"PROJECT_END_POINT": "project"
-
-	},
-
-	"I18N": {
-
-		"OPTIONS": {
-			"development": {
-				"lng": "en",
-				"fallbackLng": "en",
-				"ns": ["translations"],
-				"defaultNS": "translations",
-				"fallbackNS": "common",
-				"backend": {
-					"loadPath": "/locales/{{lng}}/{{ns}}.json"
-				}
-			},
-
-			"production": {
-				"lng": "en",
-				"fallbackLng": "en",
-				"ns": ["translations"],
-				"defaultNS": "translations",
-				"fallbackNS": "common",
-				"backend": {
-					"loadPath": "locales/{{lng}}/{{ns}}.json"
-				}
-			}
-		}
-	},
-
-	"SHAPES": {
-		"LIST": {
-			"development": [
-				{"name": "Mozambique", "iso": "MOZ", "url" :"https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/MOZ.json"},
-				{"name": "Tanzania", "iso": "TZA", "url" :"https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/TZA.json"},
-				{"name": "Malawi", "iso": "MWI", "url" :"https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/MWI.json"},
-				{"name": "Zambia", "iso": "ZMB", "url" :"https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/ZMB.json"},
-				{"name": "Afghanistan", "iso": "AFG", "url" :"https://raw.githubusercontent.com/devgateway/open-aid-geocoder/windows-local/shapes/AFG.json"}
-			]
-		}
-	}
-
+  "API": {
+    "API_BASE_URL": {
+      "development": "http://localhost:3333",
+      "production": "http://geocoding.dgstg.org"
+    },
+    "IMPORT_END_POINT": "import-file",
+    "PROJECT_END_POINT": "project",
+    "PROJECT_LIST_END_POINT": "projects"
+  },
+  "I18N": {
+    "OPTIONS": {
+      "development": {
+        "backend": {
+          "loadPath": "/locales/{{lng}}/{{ns}}.json"
+        },
+        "defaultNS": "translations",
+        "fallbackLng": "en",
+        "fallbackNS": "common",
+        "lng": "en",
+        "ns": [
+          "translations"
+        ]
+      },
+      "production": {
+        "backend": {
+          "loadPath": "locales/{{lng}}/{{ns}}.json"
+        },
+        "defaultNS": "translations",
+        "fallbackLng": "en",
+        "fallbackNS": "common",
+        "lng": "en",
+        "ns": [
+          "translations"
+        ]
+      }
+    }
+  },
+  "SEARCH": {
+    "FUZZY_LEVEL": 0,
+    "GEO_NAMES_SERVICE_USER_NAME": "developmentgateway"
+  },
+  "SHAPES": {
+    "LIST": {
+      "development": [
+        {
+          "iso": "AO",
+          "name": "Angola",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/AO.json"
+        },
+        {
+          "iso": "BF",
+          "name": "Burkina Faso",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/BF.json"
+        },
+        {
+          "iso": "BI",
+          "name": "Burundi",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/BI.json"
+        },
+        {
+          "iso": "BJ",
+          "name": "Benin",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/BJ.json"
+        },
+        {
+          "iso": "BW",
+          "name": "Botswana",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/BW.json"
+        },
+        {
+          "iso": "CD",
+          "name": "Congo, the Democratic Republic of the",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/CD.json"
+        },
+        {
+          "iso": "CF",
+          "name": "Central African Republic",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/CF.json"
+        },
+        {
+          "iso": "CG",
+          "name": "Congo",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/CG.json"
+        },
+        {
+          "iso": "CI",
+          "name": "C´te D´Ivoire",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/CI.json"
+        },
+        {
+          "iso": "CM",
+          "name": "Cameroon",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/CM.json"
+        },
+        {
+          "iso": "CV",
+          "name": "Cape Verde",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/CV.json"
+        },
+        {
+          "iso": "DJ",
+          "name": "Djibouti",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/DJ.json"
+        },
+        {
+          "iso": "DZ",
+          "name": "Algeria",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/DZ.json"
+        },
+        {
+          "iso": "EG",
+          "name": "Egypt",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/EG.json"
+        },
+        {
+          "iso": "ET",
+          "name": "Ethiopia",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/ET.json"
+        },
+        {
+          "iso": "GA",
+          "name": "Gabon",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/GA.json"
+        },
+        {
+          "iso": "GH",
+          "name": "Ghana",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/GH.json"
+        },
+        {
+          "iso": "GM",
+          "name": "Gambia",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/GM.json"
+        },
+        {
+          "iso": "GN",
+          "name": "Guinea",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/GN.json"
+        },
+        {
+          "iso": "GQ",
+          "name": "Equatorial Guinea",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/GQ.json"
+        },
+        {
+          "iso": "GW",
+          "name": "Guinea-Bissau",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/GW.json"
+        },
+        {
+          "iso": "KE",
+          "name": "Kenya",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/KE.json"
+        },
+        {
+          "iso": "KM",
+          "name": "Comoros",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/KM.json"
+        },
+        {
+          "iso": "LR",
+          "name": "Liberia",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/LR.json"
+        },
+        {
+          "iso": "LS",
+          "name": "Lesotho",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/LS.json"
+        },
+        {
+          "iso": "MA",
+          "name": "Morocco",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/MA.json"
+        },
+        {
+          "iso": "MG",
+          "name": "Madagascar",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/MG.json"
+        },
+        {
+          "iso": "ML",
+          "name": "Mali",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/ML.json"
+        },
+        {
+          "iso": "MR",
+          "name": "Mauritania",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/MR.json"
+        },
+        {
+          "iso": "MU",
+          "name": "Mauritius",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/MU.json"
+        },
+        {
+          "iso": "MW",
+          "name": "Malawi",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/MW.json"
+        },
+        {
+          "iso": "MZ",
+          "name": "Mozambique",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/MZ.json"
+        },
+        {
+          "iso": "NA",
+          "name": "Namibia",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/NA.json"
+        },
+        {
+          "iso": "NE",
+          "name": "Niger",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/NE.json"
+        },
+        {
+          "iso": "NG",
+          "name": "Nigeria",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/NG.json"
+        },
+        {
+          "iso": "RW",
+          "name": "Rwanda",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/RW.json"
+        },
+        {
+          "iso": "SC",
+          "name": "Seychelles",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/SC.json"
+        },
+        {
+          "iso": "SD",
+          "name": "Sudan",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/SD.json"
+        },
+        {
+          "iso": "SL",
+          "name": "Sierra Leone",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/SL.json"
+        },
+        {
+          "iso": "SN",
+          "name": "Senegal",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/SN.json"
+        },
+        {
+          "iso": "SO",
+          "name": "Somalia",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/SO.json"
+        },
+        {
+          "iso": "SS",
+          "name": "South Sudan",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/SS.json"
+        },
+        {
+          "iso": "ST",
+          "name": "Sao Tome and Principe",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/ST.json"
+        },
+        {
+          "iso": "SZ",
+          "name": "Swaziland",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/SZ.json"
+        },
+        {
+          "iso": "TD",
+          "name": "Chad",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/TD.json"
+        },
+        {
+          "iso": "TG",
+          "name": "Togo",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/TG.json"
+        },
+        {
+          "iso": "TN",
+          "name": "Tunisia",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/TN.json"
+        },
+        {
+          "iso": "TZ",
+          "name": "Tanzania, United Republic of",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/TZ.json"
+        },
+        {
+          "iso": "UG",
+          "name": "Uganda",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/UG.json"
+        },
+        {
+          "iso": "Z1",
+          "name": "Multinational",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/Z1.json"
+        },
+        {
+          "iso": "ZA",
+          "name": "South Africa",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/ZA.json"
+        },
+        {
+          "iso": "ZM",
+          "name": "Zambia",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/ZM.json"
+        },
+        {
+          "iso": "ZW",
+          "name": "Zimbabwe",
+          "url": "https://raw.githubusercontent.com/devgateway/open-aid-geocoder/demo/shapes/ZW.json"
+        }
+      ]
+    }
+  }
 }
