--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A  tool for Geocoding aid projects",
   "scripts": {
     "clean": "rimraf dist",
-    "build:webpack": "webpack --config webpack.config.dev.js",
-    "build": "npm run clean && npm run build:webpack",
+    "build:webpack": "webpack --config webpack.config.prod.js",
+    "build": "SET BABEL_ENV=production && npm run clean && npm run build:webpack",
     "lint": "eslint app"
   },
   "repository": {
@@ -40,6 +40,7 @@
     "babel-preset-stage-3": "^6.3.13",
     "body-parser": "^1.14.2",
     "bootstrap": "^3.3.6",
+    "copy-webpack-plugin": "^3.0.1",
     "css": "^2.2.1",
     "css-loader": "^0.23.1",
     "eslint-plugin-react": "^3.16.1",
