--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "csvtojson": "^0.5.8",
     "hapi": "^13.0.0",
     "inert": "^4.0.2",
-    "nedb": "^1.7.3"
+    "nedb": "^1.7.3",
+    "tokml": "^0.4.0"
   }
 }
